fixed svg fill property on mobile/margin between sections

--- a/style/_email.scss
+++ b/style/_email.scss
@@ -1,4 +1,5 @@
 .stayuptodate_container {
+    margin-top: 5rem;
     padding: 3rem 1.5rem;
     background: $soft-blue;
     text-align: center;
