--- a/style/_faq.scss
+++ b/style/_faq.scss
@@ -1,4 +1,5 @@
 .faq {
+    margin-top: 5rem;
     padding: 1.5rem;
     text-align: center;
     display: flex;
