--- a/style/_section extension.scss
+++ b/style/_section extension.scss
@@ -1,4 +1,5 @@
 .extension {
+    margin-top: 5rem;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
